--- a/Games/index.html
+++ b/Games/index.html
@@ -13,7 +13,7 @@
       <main>
         <section class="top">
         <a href="https://www.fortnite.com/?lang=en-US">1.Fortnite </a>
-        <img src="/Users/lslindse/Desktop/fow 2/Games/images/Fortnite.jpeg">
+        <img src="images/Fortnite.jpeg">
         <p>text</p>
         <hr>
         </section>
