--- a/Games/index.html
+++ b/Games/index.html
@@ -19,25 +19,25 @@
         </section>
         <section class="mid a">
           <a href="https://www.minecraft.net/en-us">2.Minecraft</a>
-          <img src="/Users/lslindse/Desktop/fow 2/Games/images/Minecraft.jpeg">
+          <img src="images/Minecraft.jpeg">
           <p>text</p>
           <hr>
           </section>
         <section class="mid b">
           <a href="https://www.nytimes.com/crosswords">3.NYT Games</a>
-          <img src="/Users/lslindse/Desktop/fow 2/Games/images/NYT games.png">
+          <img src="images/NYT games.png">
           <p>text</p>
           <hr>
           </section>
         <section class="mid c">
             <a href="https://mariokart8.nintendo.com/">4.MarioKart 8</a>
-            <img src="/Users/lslindse/Desktop/fow 2/Games/images/MarioKart 8.jpeg">
+            <img src="images/MarioKart 8.jpeg">
             <p>text</p>
             <hr>
             </section>
           <section class="bottom">
               <a href="https://www.roblox.com">5.Roblox</a>
-              <img src="/Users/lslindse/Desktop/fow 2/Games/images/Roblox.jpeg">
+              <img src="images/Roblox.jpeg">
               <p>text</p>
           </section>
          </main>
