--- a/Holiday/index.html
+++ b/Holiday/index.html
@@ -12,13 +12,13 @@
       </header>
       <section class="top">
         <h2>Turkey</h2>
-        <img src="/Users/lslindse/Desktop/fow 2/Holiday/images/Turkey.jpeg">
+        <img src="images/Turkey.jpeg">
       </section>
       <h1 class="center">VS</h1>
         <div class="diagonal">
         </div>
       <section class="bottom">
-        <img src="/Users/lslindse/Desktop/fow 2/Holiday/images/Ham.jpeg">
+        <img src="images/Ham.jpeg">
         <h2>Ham</h2>
       </section>
     </body>
